<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">T3hh4xx0r Addons Manager</string>

    <string name="packages_addons">Flashable addon packages</string>
    <string name="apps_addons">Additional applications</string>
    <string name="kernel_addons">Addditional kernels</string>

    <string name="google_apps">Google Apps</string>
    <string name="google_apps_summary">Flashable package containing google apps</string>
    <string name="sbc_1">OMFGBk 1</string>
    <string name="sbc_1_summary">EXPERIMENTAL OMFGB kernel with SBC</string>
    <string name="omfgbmechabfs">OMFGB-Drod-BFS-StockClock</string>
    <string name="omfgbmechabfs_summary">Custom stock clock/voltage with BFS, (stock kernel)</string>
    <string name="omfgbmechacfs">OMFGB-Drod-CFS-StockClock</string>
    <string name="omfgbmechacfs_summary">Custom stock clock/voltage with CFS</string>
    <string name="omfgbmechakangbang">KangBang-Drod-BFS-OC/UV</string>
    <string name="omfgbmechakang_summary">Drod2169s KangBang BFS/OC/UV kernel</string>
    <string name="lean_title">leanKernel v3.1.6</string>
    <string name="lean_summary">Imoseyons leanKernel for AOSP</string>
    <string name="omft">OMFT</string>
    <string name="omft_summary">Theme for OMFGB roms.</string>

    <string name="addons_title">T3hh4xx0r Addons</string>
    <string name="addons_summary">Various addons availabe for your flashing needs</string>

    <string name="nightlys_summary">OMFGB nightlys, remember NO SUPPORT PROVIDED</string>
    <string name="nightlys_title">OMFGB Nightlys</string>

    <string name="no_sdcard">Cannot update app. Sdcard is not writeable or present.</string>

    <string name="addons_label">T3hh4xx0r Addons</string>
    <string name="nightlies_label">T3hh4xx0r Nightlies</string>
    
    <string name="refresh" >Refresh</string>

</resources>
