<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:addons="http://schemas.android.com/apk/res/com.t3hh4xx0r.addons">

	<PreferenceCategory android:title="@string/packages_addons">
	<com.t3hh4xx0r.addons.IconPreferenceScreen
			addons:icon="@drawable/google"
			android:key="google_apps_addon" 
			android:title="@string/google_apps"
			android:summary="@string/google_apps_summary" >
	</com.t3hh4xx0r.addons.IconPreferenceScreen>
        </PreferenceCategory>

	<PreferenceCategory android:title="@string/apps_addons"
        android:key="apps_category">
        <com.t3hh4xx0r.addons.IconPreferenceScreen
                        addons:icon="@drawable/omft"
                        android:key="omft" 
                        android:title="@string/omft"
                        android:summary="@string/omft_summary" >
        </com.t3hh4xx0r.addons.IconPreferenceScreen>

        </PreferenceCategory>

        <PreferenceCategory 
	android:title="@string/kernel_addons"
	android:key="kernel_category"
	>			
        <com.t3hh4xx0r.addons.IconPreferenceScreen
                        addons:icon="@drawable/kernel"
                        android:key="sbc_1" 
                        android:title="@string/sbc_1"
                        android:summary="@string/sbc_1_summary" >
        </com.t3hh4xx0r.addons.IconPreferenceScreen>
	<com.t3hh4xx0r.addons.IconPreferenceScreen
			addons:icon="@drawable/kernel"
			android:key="omfgbmechabfs"
			android:title="@string/omfgbmechabfs"
			android:summary="@string/omfgbmechabfs_summary" >
	</com.t3hh4xx0r.addons.IconPreferenceScreen>
	<com.t3hh4xx0r.addons.IconPreferenceScreen
			addons:icon="@drawable/kernel"
			android:key="omfgbmechacfs"
			android:title="@string/omfgbmechacfs"
			android:summary="@string/omfgbmechacfs_summary" >
	</com.t3hh4xx0r.addons.IconPreferenceScreen>
	<com.t3hh4xx0r.addons.IconPreferenceScreen
			addons:icon="@drawable/kernel"
			android:key="omfgbmechakangbang"
			android:title="@string/omfgbmechakangbang"
			android:summary="@string/omfgbmechakang_summary" >
	</com.t3hh4xx0r.addons.IconPreferenceScreen>
        </PreferenceCategory>

</PreferenceScreen>
